things unclear:
wchar_t/L"string" purpose
switch vs callbacks (virtuals)

latests controls:
F2 to start and end recording
F6 or alt+F4 quits the game
Enter will spawn player
WASD, arrows moves him
Space - jumps

day84: 
- ground

day77:
- some sort of stairs/ramp

day66:
- added simualtion regions
- added sword projectile

day60:
- added hitpoints
- color is now v4